<resources>
    <string name="app_name">Recycler Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="add">ADD</string>
    <string name="low">LOW</string>
    <string name="medium">MEDIUM</string>
    <string name="high">HIGH</string>
    <string name="select_priority">Select Priority</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="Do_you_want_to_delete_this_item">Do You Want To Delete This List</string>
    <string name="all">ALL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">ToDo</string>
    <string name="Enter_todo">Enter ToDo</string>
    <string name="is_completed">is completed</string>
    <string name="Enter_todo_item">Enter ToDoItem</string>
    <string name="update_ToDo">Upadate ToDo</string>
    <string name="delete_todo">Delete ToDo</string>
    <string name="Do_you_want_to_delete_this_todo_item">Do You Want To Delete This ToDo Item?</string>
    <string name="date">Date</string>

</resources>