<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvToDO"
        android:text="@string/title"
        android:textSize="@dimen/sp_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <CheckBox
        android:id="@+id/cbIsCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false" />

    <Button
        android:id="@+id/btnToDoUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_ToDo" />

    <Button
        android:id="@+id/btnToDoDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_todo" />

</androidx.appcompat.widget.LinearLayoutCompat>